# Nano-Claude-Code

./: Cargo.toml  README.md
scripts/: demo-smoke.sh
src/: agent.rs  anthropic.rs  bash_tool.rs  cli.rs  config.rs  core.rs  edit.rs  file_tools.rs  lib.rs  main.rs  mcp.rs  message_protocol.rs  permissions.rs  process.rs  provider.rs  sandbox.rs  search.rs  session.rs  shell.rs  task.rs  tools.rs  worktree.rs
