[package]
name = "nano-claude-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
filetime = "0.2"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
unicode-normalization = "0.1"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.15"
